--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <link rel="stylesheet" href="../../static/photon/css/photon.css">
+    <!--<script src="../../static/photon/template-app/app.js" charset="utf-8"></script> -->
     <link rel="stylesheet" href="./index.css">
-    <title>Hello World!</title>
+    <title>Index</title>
   </head>
   <body>
 
