--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../static/photon/css/photon.css">
     <!--<script src="../../static/photon/template-app/app.js" charset="utf-8"></script> -->
     <link rel="stylesheet" href="./index.css">
-    <title>Index</title>
+    <!-- <title>Index</title> -->
   </head>
   <body>
 
